Added functionality to calculator

--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
         <title>Calculator</title>
         <meta charset="UTF-8">
         <script src="javascript.js" defer></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div class="container">
+            <div class="top-side">0</div>
+            <div class="bottom-side">
+                <div class="left-side">
+                    <button id="number">1</button>
+                    <button id="number">2</button>
+                    <button id="number">3</button>
+                    <button id="number">4</button>
+                    <button id="number">5</button>
+                    <button id="number">6</button>
+                    <button id="number">7</button>
+                    <button id="number">8</button>
+                    <button id="number">9</button>
+                    <button id="clear">C</button>
+                    <button id="number">0</button>
+                </div>
+                <div class="right-side">
+                    <button class="operator" id="divide">/</button>
+                    <button class="operator" id="multiply">*</button>
+                    <button class="operator" id="substract">-</button>
+                    <button class="operator" id="add">+</button>
+                    <button id="equal">=</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
