Added decimal button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <button id="number">9</button>
                     <button id="clear">C</button>
                     <button id="number">0</button>
+                    <button id="decimal">.</button>
                 </div>
                 <div class="right-side">
                     <button class="operator" id="divide">/</button>
