--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
             <div class="top-side">0</div>
             <div class="bottom-side">
                 <div class="left-side">
-                    <button id="number">1</button>
-                    <button id="number">2</button>
-                    <button id="number">3</button>
-                    <button id="number">4</button>
-                    <button id="number">5</button>
-                    <button id="number">6</button>
                     <button id="number">7</button>
                     <button id="number">8</button>
                     <button id="number">9</button>
-                    <button id="clear">C</button>
+                    <button id="number">4</button>
+                    <button id="number">5</button>
+                    <button id="number">6</button>
+                    <button id="number">1</button>
+                    <button id="number">2</button>
+                    <button id="number">3</button>
+                    <button class="clear">C</button>
                     <button id="number">0</button>
                     <button id="decimal">.</button>
+                    <button class="equal">=</button>
                 </div>
                 <div class="right-side">
-                    <button class="operator" id="divide">/</button>
-                    <button class="operator" id="multiply">*</button>
+                    <button class="operator" id="divide">÷</button>
+                    <button class="operator" id="multiply">×</button>
                     <button class="operator" id="substract">-</button>
                     <button class="operator" id="add">+</button>
-                    <button id="equal">=</button>
                 </div>
             </div>
         </div>
+        <div class="footer">Made by <a href="https://github.com/murkyweb">@murkyweb</a></div>
     </body>
 </html>
